--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.ontimize.boot</groupId>
     <artifactId>ontimize-boot-parent</artifactId>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>2.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <organization>
@@ -17,13 +17,13 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.2.RELEASE</version>
+        <version>2.4.4</version>
     </parent>
 
     <properties>
-        <project.dependency.spring.boot.version>2.1.2.RELEASE</project.dependency.spring.boot.version>
-        <project.dependency.ontimize.boot.version>2.2.0-SNAPSHOT</project.dependency.ontimize.boot.version>
-        <project.dependency.spring.cloud.version>Greenwich.RELEASE</project.dependency.spring.cloud.version>
+        <project.dependency.spring.boot.version>2.4.4</project.dependency.spring.boot.version>
+        <project.dependency.ontimize.boot.version>2.2.1-SNAPSHOT</project.dependency.ontimize.boot.version>
+        <project.dependency.spring.cloud.version>2020.0.0</project.dependency.spring.cloud.version>
     </properties>
 	
 	<distributionManagement>
